[package]
name = "with_sciter_mysql"
version = "0.1.0"
authors = ["Hamid Semix <semix.hamidouh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "*"
mysql = "16.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"